small adjustement to header font size so overflow is prevented

--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -3,6 +3,10 @@
 
   .navbar-main-custom {
     max-width: 1180px !important;
+
+    .nav-link{
+      font-size: 14px;
+    }
   }
   #logo{
     display: flex;
